<resources>
    <string name="app_name">MaterialLogin</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="remember">记住密码</string>

    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="one_bottom">影院管理</string>
    <string name="two_bottom">人员管理</string>
    <string name="three_bottom">我的</string>
    <string name="four_bottom">影厅管理</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
