<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Mvp.Activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/content"
        android:background="@mipmap/bg"
        android:transitionName="guide_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="350dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_centerInParent="true"
            android:id="@+id/cv">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                    <View
                        android:layout_alignParentStart="true"
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:background="@color/login"
                        />
                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:text="@string/login"
                        android:textColor="@color/login"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#c5c5c5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="13sp"
                            android:hint="@string/Username"
                            android:textColor="@color/login"
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:background="@drawable/selector_bg_edit"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#c5c5c5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="13sp"
                            android:hint="@string/Password"
                            android:textColor="@color/login"
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:background="@drawable/selector_bg_edit"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <CheckBox
                        android:id="@+id/bt_remember"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:background="@drawable/checkbox"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:buttonTint="#d1d1d1"
                        android:paddingBottom="2dp"
                        android:checked="true"
                        android:text="@string/remember"
                        android:textColor="@color/login"
                        android:textSize="13sp"
                        >
                    </CheckBox>
                </LinearLayout>

                <RelativeLayout
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <Button
                        android:id="@+id/bt_go"
                        android:background="@drawable/bt_shape"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:text="@string/go"
                        android:textColor="@color/login"
                        >
                    </Button>
                </RelativeLayout>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/login"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus"
            android:transitionName="loginFab"
            android:layout_alignTop="@id/cv"
            android:layout_marginTop="25dp"
            android:layout_alignEnd="@id/cv"
            android:layout_marginEnd="-20dp"
            />

    </RelativeLayout>


    <FrameLayout
        android:layout_below="@id/toolbar"
        android:visibility="gone"
        android:id="@+id/loading"
        android:background="#ccffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="200dp"
            android:layout_height="200dp"
            style="@style/AVLoadingIndicatorView"
            android:visibility="visible"
            android:layout_gravity="center"
            app:indicatorName="BallClipRotateMultipleIndicator"
            app:indicatorColor="@color/main_theme"
            />

    </FrameLayout>
</FrameLayout>
